Bug 1145560 - During downscale-during-decode, compute the original size invalid rect based on the target size invalid rect. r=tn